--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+:link {color: black;}
+:visited {color: black;}
+:link:focus {background: white;}
+:link:hover {background: white;}
+
+
+
+
 
 
 /* background */
